@@ -1,5 +1,11 @@
 use ExtUtils::MakeMaker;
 
+my $mm_ver = $ExtUtils::MakeMaker::VERSION;
+if ($mm_ver =~ /_/) { # dev version
+    $mm_ver = eval $mm_ver;
+    die $@ if $@;
+}
+
 WriteMakefile(
 	'NAME'		=> 'Ogg::Vorbis::Header::PurePerl',
 	'VERSION_FROM'	=> 'lib/Ogg/Vorbis/Header/PurePerl.pm',
@@ -7,4 +13,10 @@ WriteMakefile(
 	($] >= 5.005 ?
 	(ABSTRACT_FROM => 'lib/Ogg/Vorbis/Header/PurePerl.pm',
 	AUTHOR     => 'Dan Sully <daniel@cpan.org>') : ()),
+
+    ($mm_ver >= 6.31
+        ? (LICENSE => 'gpl')
+        : ()
+    ),
+
 );
