@@ -7,6 +7,7 @@ Revision history for Perl module Ogg::Vorbis::Header::PurePerl.
     - Deleted META.yml from repo, as it's generated by EUMM.
     - Reformatted this file as per CPAN::Changes::Spec
     - Changed abstract (=head1 NAME) section to follow convention
+    - Specified license type (GPL) in metadata, to match doc.
     - Changed min perl version in code from 5.005 to 5.006, as "our ..."
       requires 5.006
 
